# product-impact-analizer

./: README.md  env.example  pyproject.toml
src/: impact_analizer.py  main.py
src/static/: script.js  style.css
src/templates/: index.html
